--- a/package.json
+++ b/package.json
@@ -1,13 +1,88 @@
 {
-  "name": "@./source",
+  "name": "@monorepo/fullstack",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "concurrently \"pnpm db:up\" \"pnpm backend:dev\" \"pnpm frontend:dev\"",
+    "frontend:dev": "nx serve frontend",
+    "backend:dev": "nx dev backend",
+    "build": "nx build frontend && nx build backend",
+    "build:frontend": "nx build frontend",
+    "build:backend": "nx build backend",
+    "test": "nx test",
+    "lint": "nx run-many --target=lint --all",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "db:up": "docker-compose up -d postgres",
+    "db:down": "docker-compose down",
+    "db:reset": "docker-compose down -v && docker-compose up -d postgres",
+    "db:migrate": "drizzle-kit migrate",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "setup:github": "./prepare-github.sh",
+    "test:integration": "./test-integration.sh",
+    "check:all": "pnpm format:check && pnpm lint && pnpm build"
+  },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "@nx/devkit": "21.3.10",
+    "@nx/eslint": "21.3.10",
+    "@nx/eslint-plugin": "21.3.10",
     "@nx/js": "21.3.10",
+    "@nx/node": "^21.3.10",
+    "@nx/playwright": "21.3.10",
+    "@nx/react": "^21.3.10",
+    "@nx/vite": "^21.3.10",
+    "@nx/web": "21.3.10",
     "@nx/workspace": "21.3.10",
-    "nx": "21.3.10"
+    "@playwright/test": "^1.36.0",
+    "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/react": "16.1.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/ui": "^3.0.0",
+    "concurrently": "^9.2.0",
+    "drizzle-kit": "^0.31.4",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-playwright": "^1.6.2",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
+    "nx": "21.3.10",
+    "prettier": "^2.6.2",
+    "tslib": "^2.3.0",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.0",
+    "vite": "^6.0.0",
+    "vitest": "^3.0.0"
+  },
+  "dependencies": {
+    "@fastify/cors": "^11.0.1",
+    "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.4",
+    "drizzle-zod": "^0.8.2",
+    "fastify": "^5.4.0",
+    "postgres": "^3.4.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router-dom": "6.29.0",
+    "zod": "^4.0.14"
   }
 }
