--- a/apps/backend/project.json
+++ b/apps/backend/project.json
@@ -11,7 +11,7 @@
         "outputPath": "dist/apps/backend",
         "main": "apps/backend/src/main.ts",
         "tsConfig": "apps/backend/tsconfig.app.json",
-        "assets": ["apps/backend/src/assets"]
+        "assets": []
       },
       "dependsOn": ["types:build"]
     },
