--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ NODE_ENV=development
 PORT=3000
 HOST=0.0.0.0
 LOG_LEVEL=info
+JWT_SECRET=supersecret
 
 # Base de données PostgreSQL
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/fullstack_db
