--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "6.29.0",
+    "@tanstack/react-query": "^5.0.0",
+    "axios": "^1.6.0",
     "zod": "^4.0.14"
   }
 }
