fix(backend): improvements

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f",
     "clean:ports": "./clean-ports.sh",
+    "create:admin": "tsx apps/backend/scripts/create-admin.ts",
     "setup:github": "./prepare-github.sh",
     "test:integration": "./test-integration.sh",
     "check:all": "pnpm format:check && pnpm lint && pnpm build"
