feat(tunebook): add tunebook project with sample data
- Add comprehensive tunebook data analysis project
- Include sample data generator with TypeScript types
- Add processed sample data (small files only)
- Update .gitignore to exclude large processed files
- Include documentation and README files

--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,7 @@ Thumbs.db
 .github/instructions/nx.instructions.md
 
 vite.config.*.timestamp*
+
+# Tunebook data files (too large for git)
+tunebook/processed_*.json
 vitest.config.*.timestamp*
