feat(tunebook): migrate to proper monorepo structure
- Create shared @monorepo/tunebook library with types and utilities
- Add tunebook-playground app for interactive data exploration
- Migrate types, data-processor, and sample-generator to shared lib
- Add download script for TheSession.org data files
- Configure proper Nx project structure with build/test targets
- Add comprehensive README and documentation
- Set up git-ignored data directory for large JSON files
- Add scripts for easy playground access: tunebook:playground, tunebook:stats, tunebook:download

The tunebook project is now properly integrated into the monorepo with:
- Shared library for reusable code
- Interactive playground for data exploration
- Proper dependency management
- Clean separation between sample and real data

--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,7 @@ vite.config.*.timestamp*
 
 # Tunebook data files (too large for git)
 tunebook/processed_*.json
+
+# Tunebook playground data directory (large JSON files from external source)
+apps/tunebook-playground/data/*.json
 vitest.config.*.timestamp*
