--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "create:admin": "tsx apps/backend/scripts/create-admin.ts",
     "setup:github": "./prepare-github.sh",
     "test:integration": "./test-integration.sh",
-    "check:all": "pnpm format:check && pnpm lint && pnpm build"
+    "check:all": "pnpm format:check && pnpm lint && pnpm build",
+    "tunebook:playground": "nx dev tunebook-playground",
+    "tunebook:download": "cd apps/tunebook-playground && node scripts/download-data.js",
+    "tunebook:stats": "nx dev tunebook-playground stats"
   },
   "private": true,
   "devDependencies": {
@@ -35,6 +38,7 @@
     "@nx/devkit": "21.3.10",
     "@nx/eslint": "21.3.10",
     "@nx/eslint-plugin": "21.3.10",
+    "@nx/jest": "21.3.10",
     "@nx/js": "21.3.10",
     "@nx/node": "^21.3.10",
     "@nx/playwright": "21.3.10",
@@ -49,6 +53,7 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
@@ -64,10 +69,16 @@
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "jest": "^30.0.2",
+    "jest-environment-node": "^30.0.2",
+    "jest-util": "^30.0.2",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.3.10",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.4.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
@@ -77,6 +88,8 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "@tanstack/react-query": "^5.0.0",
+    "axios": "^1.6.0",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "drizzle-zod": "^0.8.2",
@@ -85,8 +98,6 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "6.29.0",
-    "@tanstack/react-query": "^5.0.0",
-    "axios": "^1.6.0",
     "zod": "^4.0.14"
   }
 }
