feat: complete tunebook monorepo integration with sample generator
✨ Major Features:
- Integrated tunebook library into monorepo with proper @tunebook/core scope
- Implemented comprehensive sample data generator for development/testing
- Added complete TypeScript types for TheSession.org data structures
- Created interactive playground for data exploration

🔧 Technical Improvements:
- Fixed ES modules configuration across all projects
- Corrected path mappings in tsconfig.base.json
- Resolved double stats display issue in playground
- Removed non-existent 'users' references from playground

📚 Documentation:
- Added comprehensive TSDoc documentation for data processor
- Documented all major processing pipeline steps
- Included examples and usage patterns
- Explained musical feature extraction algorithms

🏗️ Architecture:
- Proper monorepo structure with shared libraries
- Consistent naming convention (@tunebook scope)
- Robust error handling and type safety
- Support for both real and sample data

🎵 Data Processing:
- Complete TheSession.org data file support (tunes, sets, recordings, sessions, aliases, popularity)
- Musical feature extraction for similarity analysis
- Search vector generation for full-text search
- Relationship building between entities

The playground now works seamlessly with 52K+ real tunes from TheSession.org
and can generate realistic sample data when files are not available.

--- a/apps/tunebook-playground/package.json
+++ b/apps/tunebook-playground/package.json
@@ -12,7 +12,7 @@
     "stats": "tsx src/main.ts stats"
   },
   "dependencies": {
-    "@monorepo/tunebook": "*"
+    "@tunebook/core": "*"
   },
   "devDependencies": {
     "tsx": "^4.7.0",
