--- a/libs/tunebook/package.json
+++ b/libs/tunebook/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@monorepo/tunebook",
+  "name": "@tunebook/core",
   "version": "0.0.1",
   "private": true,
-  "type": "commonjs",
+  "type": "module",
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
   "dependencies": {
