--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@/types": ["dist/libs/types"],
-      "@monorepo/tunebook": ["libs/tunebook/src/index.ts"]
+      "@tunebook/core": ["libs/tunebook/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
