--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "private": true,
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@nx/cypress": "21.3.10",
     "@nx/devkit": "21.3.10",
     "@nx/eslint": "21.3.10",
     "@nx/eslint-plugin": "21.3.10",
@@ -61,9 +62,11 @@
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
     "concurrently": "^9.2.0",
+    "cypress": "^14.2.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-cypress": "^3.5.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-playwright": "^1.6.2",
@@ -90,10 +93,14 @@
     "@fastify/cors": "^11.0.1",
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.6.0",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "drizzle-zod": "^0.8.2",
     "fastify": "^5.4.0",
+    "jotai": "^2.13.0",
+    "jotai-immer": "^0.4.1",
+    "lucide-react": "^0.539.0",
     "postgres": "^3.4.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
